--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 										<header class="major" style="padding-bottom:20px ;">
 											<h2>ABOUT ME</h2>
 										</header>
-										<p>I am an engineering undergraduate with a passion for Data Science and Machine Learning.<b></b>
+										<p>I’m a Master of Data Analytics graduate from Western University and a Data Analyst at Walmart Canada, passionate about building data and AI solutions that create real-world impact.<b></b>
 										</p>
 										<b></b>
-											
-										<p>Currently, I work as a Data Analytics Senior Consultant at EXL, leading Risk Analytics for Banking sector clients. Prior to this I worked as an Automation Consultant at EY, transforming data-centric business processes by using intelligent automation solutions for over 3 years. It is my mission to keep learning and building my arsenal of analytical techniques.
-										</p> 
+										<p>Currently, I work on a Generative AI–driven tax modernization initiative at Walmart, using LLMs to improve compliance and operational efficiency across Walmart US. Previously, I applied predictive modeling in healthcare to optimize patient flow, and earlier in my career at EXL and Ernst & Young, I built analytics, anomaly detection, and automation solutions.<b></b>
+										</p>
+										<b></b>
+										<p>I enjoy working at the intersection of data, business, and emerging technologies, especially Generative AI, and I’m driven by curiosity, continuous learning, and turning complex problems into practical, data-driven solutions.</p> 
 										<!--
 										<ul class="actions">
 											<li><a href="" class="label">GitHub&emsp;</a>
@@ -61,7 +62,7 @@
 											</li>
 										</ul> -->
 									</div>
-									<span class="image"><img src="images/Arushi - Profile Photo.jpeg" alt="" /></span>
+									<span class="image"><img src="images/Arushi - Profile Photo.jpg" alt="" /></span>
 								</div>
 							</section>
 
@@ -71,6 +72,18 @@
 									<h2>PROJECTS</h2>
 								</header>
 								<ul class="features">
+									<li>
+										<span class="image"><img src="images/Project4.png" height="250" width="250" alt=""/></span>
+										<!--<span class="icon solid major style1 fa-code"></span>-->
+										<h3>Wake the Beep Up</h3>
+										<p>A simple real-time video monitoring application to alert drivers as they turn sleepy..</p>
+									</li>
+									<li>
+										<span class="image"><img src="images/Project5.png" height="250" width="250" alt=""/></span>
+										<!--<span class="icon solid major style1 fa-code"></span>-->
+										<h3>Hospital Admissions Forecasting</h3>
+										<p>Projected hospital volumes for the upcoming winter months (September 2025 to March 2026) and estimates of hospital volume over the next five years....</p>
+									</li>
 									<li>
 										<span class="image"><img src="images/Project1.png" height="250" width="250" alt=""/></span>
 										<!--<span class="icon solid major style1 fa-code"></span>-->
